--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -1,3 +1,8 @@
+@charset "UTF-8";
+:root {
+  --font: "Roboto", Arial, Helvetica, sans-serif;
+}
+
 /* Reset base config */
 *,
 ::after,
@@ -21,7 +26,7 @@ main {
 
 h1 {
   font-size: 2em;
-  margin: .67em 0;
+  margin: 0;
 }
 
 a {
@@ -250,9 +255,10 @@ template {
 body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  font-family: var(--font);
   font-size: 14px;
   font-weight: 400;
+  position: relative;
   margin: 0;
   overflow-x: hidden;
 }
@@ -271,73 +277,104 @@ textarea:focus {
 /* Container block */
 .container {
   width: 100%;
-  padding: 0px 20px;
+  padding: 0px 15px;
   max-width: calc(1170px + 40px);
   margin: 0 auto;
 }
 
-.header {
-  background-color: white;
-  position: -webkit-sticky;
-  position: sticky;
+.menu {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0;
+  z-index: 1;
+}
+
+.menu svg {
+  z-index: -1;
+}
+
+@media (min-width: 768px) {
+  .menu {
+    display: none;
+  }
+}
+
+.line {
+  fill: none;
+  stroke: black;
+  stroke-width: 6;
+  -webkit-transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1), stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1), stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.line1 {
+  stroke-dasharray: 60 207;
+  stroke-width: 6;
+}
+
+.line2 {
+  stroke-dasharray: 60 60;
+  stroke-width: 6;
+}
+
+.line3 {
+  stroke-dasharray: 60 207;
+  stroke-width: 6;
+}
+
+.opened .line1 {
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
+  stroke-width: 6;
+}
+
+.opened .line2 {
+  stroke-dasharray: 1 60;
+  stroke-dashoffset: -30;
+  stroke-width: 6;
+}
+
+.opened .line3 {
+  stroke-dasharray: 90 207;
+  stroke-dashoffset: -134;
+  stroke-width: 6;
+}
+
+#mobileMenu {
+  --x: 250px;
+  background-color: #fff;
+  display: block;
+  position: fixed;
+  padding-top: 100px;
+  padding-left: 40px;
   top: 0;
-  left: 0;
+  right: 0;
+  height: 100%;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+  -webkit-transform: translateX(var(--x));
+          transform: translateX(var(--x));
+  width: 200px;
+  z-index: 1;
+}
+
+@media (min-width: 768px) {
+  #mobileMenu {
+    display: none;
+  }
+}
+
+#mobileMenu ul li {
   width: 100%;
 }
 
-.header__content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  gap: 1rem;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.header__item_end {
-  margin-left: auto;
-}
-
-.logo {
-  text-decoration: none;
-  border: none;
-}
-
-.logo__text {
-  background: linear-gradient(45deg, #950ebd 33%, #ff7934 66%, #FF22A4);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
-.nav__list {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 1rem;
-}
-
-.nav__item {
-  color: #000;
-}
-
-.nav__link {
-  text-decoration: none;
-  font-size: 18px;
-  color: inherit;
-  padding: 1rem;
-  -webkit-transition: 0.2s ease background-color;
-  transition: 0.2s ease background-color;
-}
-
-.nav__link:hover {
-  background-color: rgba(0, 0, 0, 0.2);
+#mobileMenu ul li a {
+  border-radius: 0;
+  width: 100%;
 }
 
 .btn {
@@ -354,6 +391,7 @@ textarea:focus {
   padding: 1rem 1.5rem 1rem 1rem;
   -webkit-transition: 0.2s ease background-color;
   transition: 0.2s ease background-color;
+  border-radius: .3rem;
 }
 
 .btn:hover {
@@ -361,26 +399,194 @@ textarea:focus {
 }
 
 .btn__icon {
-  width: 20px;
-  height: 20px;
+  width: 16px;
+  height: 16px;
 }
 
 .btn__text {
   font-size: 16px;
 }
 
-.preview {
-  background: url("../../img/head1.png") no-repeat center/cover;
-  padding: 6rem 0;
+.header {
+  background-color: #ffffff;
+  padding: .5rem 0;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1;
 }
 
-.preview__content {
+.header__content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   gap: 1rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header__item {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 auto;
+          flex: 0 1 auto;
+}
+
+.header__item_left {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+.header__item_center {
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+}
+
+.header__item_end {
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+}
+
+.header__logo {
+  font-size: 24px;
+}
+
+.header__button {
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .header__button {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+.logo {
+  text-decoration: none;
+  border: none;
+}
+
+.logo__text {
+  background: linear-gradient(45deg, #950ebd 33%, #ff7934 66%, #FF22A4);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.nav {
+  display: none;
+}
+
+@media (min-width: 790px) {
+  .nav {
+    display: block;
+  }
+}
+
+.nav__list {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  list-style: none;
+  margin: 0;
+  gap: .5rem;
+}
+
+.nav__item {
+  color: #000;
+  width: 100%;
+}
+
+@media (min-width: 425px) {
+  .nav__item {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+}
+
+.nav__link {
+  border-radius: .3rem;
+  color: inherit;
+  display: block;
+  font-family: var(--font);
+  font-size: 16px;
+  font-weight: 300;
+  padding: .8rem .5rem;
+  -webkit-transition: 0.2s ease background-color;
+  transition: 0.2s ease background-color;
+  text-decoration: none;
+  text-transform: uppercase;
+  width: 100%;
+}
+
+.nav__link:hover {
+  background-color: rgba(221, 221, 221, 0.9);
+}
+
+@media (min-width: 425px) {
+  .nav__link {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+}
+
+.preview {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: url("../../img/head1.png") no-repeat center/cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 50vh;
+  position: relative;
+  z-index: 0;
+}
+
+@media (min-width: 425px) {
+  .preview {
+    height: 80vh;
+  }
+}
+
+.preview__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.33);
+  z-index: -1;
+}
+
+.preview__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-flow: row-reverse wrap;
+          flex-flow: row-reverse wrap;
+  gap: 2.5rem;
 }
 
 .preview__item {
@@ -393,6 +599,14 @@ textarea:focus {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.preview__item_media {
+  -ms-flex-preferred-size: 550px;
+      flex-basis: 550px;
 }
 
 .preview__content-wrapper {
@@ -410,23 +624,313 @@ textarea:focus {
       -ms-flex-pack: center;
           justify-content: center;
   gap: 1rem;
-  max-width: 400px;
+  text-align: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media (min-width: 1029px) {
+  .preview__content-wrapper {
+    max-width: 400px;
+    text-align: left;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
 }
 
 .preview__title {
+  color: #fff;
   font-family: "Roboto", Arial, Helvetica, sans-serif;
-  font-size: 38px;
+  font-size: calc(1.7em + 16 * ((100vw - 320px) / (1920 - 320)));
   font-weight: 400;
 }
 
 .preview__description {
+  color: #fff;
   font-family: "Roboto", Arial, Helvetica, sans-serif;
-  font-size: 24px;
+  font-size: 21px;
   font-weight: 300;
   line-height: 1.3;
 }
 
+@media (min-width: 425px) {
+  .preview__description {
+    font-size: 24px;
+  }
+}
+
 .preview__button {
   display: inline-block;
+}
+
+.preview__media {
+  border-radius: 1rem;
+}
+
+.preview__video {
+  display: none;
+}
+
+@media (min-width: 425px) {
+  .preview__video {
+    display: block;
+  }
+}
+
+.vantage {
+  background-color: #10101e;
+  color: #fff;
+  padding: 6rem 0;
+}
+
+.vantage__title {
+  background: linear-gradient(45deg, #ff0ebd 13%, #0D78BC 66%, #FF22A4);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-family: var(--font);
+  font-size: calc(2.1em + 16 * ((100vw - 320px) / (1920 - 320)));
+  font-weight: 400;
+  margin-bottom: 1em;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.vantage__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.vantage__item {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  padding: 1rem;
+}
+
+.vantage__item_img--first {
+  -ms-flex-preferred-size: 600px;
+      flex-basis: 600px;
+}
+
+.vantage__item_img--second {
+  -ms-flex-preferred-size: 500px;
+      flex-basis: 500px;
+}
+
+.vantage__item_img--third {
+  -ms-flex-preferred-size: 300px;
+      flex-basis: 300px;
+}
+
+.vantage__item_img--fourth {
+  -ms-flex-preferred-size: 400px;
+      flex-basis: 400px;
+}
+
+.vantage__item_img--fourth img {
+  width: 400px;
+}
+
+.vantage__text {
+  width: 100%;
+  max-width: 430px;
+}
+
+.vantage__text_align_right {
+  text-align: right;
+  margin-left: auto;
+}
+
+.vantage__subtitle {
+  background: linear-gradient(45deg, #19979c 13%, #0D78BC 66%, #19979c);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: #fff;
+  font-family: var(--font);
+  font-size: calc(1.8em + 16 * ((100vw - 320px) / (1920 - 320)));
+  font-weight: 300;
+  margin-bottom: 1em;
+  text-transform: uppercase;
+}
+
+.vantage__description {
+  color: #fff;
+  font-family: var(--font);
+  font-size: 25px;
+  font-weight: 300;
+  word-break: break-word;
+  line-height: 1.4;
+}
+
+.vantage__list {
+  font-family: var(--font);
+  font-size: 25px;
+  font-weight: 300;
+  margin-left: 1em;
+}
+
+.vantage__img {
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  border-radius: 2rem;
+}
+
+.feedback {
+  padding: 3rem 0;
+  background-color: #fff;
+}
+
+.slider {
+  max-width: 960px;
+}
+
+/* дополнительные стили для этого примера */
+.slider__items {
+  counter-reset: slide;
+}
+
+.slider__item {
+  height: 320px;
+  overflow: hidden;
+  position: relative;
+  counter-increment: slide;
+}
+
+.slider__item::after {
+  content: counter(slide);
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  color: #fff;
+  font-style: italic;
+  font-size: 32px;
+  font-weight: bold;
+}
+
+img {
+  display: inline-block;
+  height: auto;
+  max-width: 100%;
+  border-radius: 50%;
+}
+
+.slider__item:nth-child(1) {
+  background: linear-gradient(45deg, #085078 10%, #85d8ce 90%);
+}
+
+.slider__item:nth-child(2) {
+  background: -webkit-gradient(linear, left top, right top, from(#dd1818), to(#333333));
+  background: linear-gradient(to right, #dd1818, #333333);
+}
+
+.slider__item:nth-child(3) {
+  background: -webkit-gradient(linear, left top, right top, from(#093028), to(#237a57));
+  background: linear-gradient(to right, #093028, #237a57);
+}
+
+.slider__item:nth-child(4) {
+  background: -webkit-gradient(linear, left top, right top, from(#243B55), to(#141E30));
+  background: linear-gradient(to right, #243B55, #141E30);
+}
+
+.slider__item_inner {
+  position: absolute;
+  left: 15%;
+  right: 15%;
+  top: 36px;
+  bottom: 36px;
+  overflow: hidden;
+  color: #fff;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.slider__item_img {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 80px;
+          flex: 0 0 80px;
+  max-width: 80px;
+}
+
+.slider__item_testimonial {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 0px;
+          flex: 1 0 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+}
+
+@media (min-width: 576px) {
+  .slider__item {
+    height: 250px;
+  }
+  .slider__item_inner {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .slider__item_testimonial {
+    margin-left: 15px;
+  }
+  .slider__item_img {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 150px;
+            flex: 0 0 150px;
+    max-width: 150px;
+  }
+  .slider__item_testimonial {
+    text-align: left;
+  }
+}
+
+.slider__item_name {
+  font-size: 20px;
+  margin-bottom: 8px;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.slider__item_post {
+  font-size: 14px;
+  margin-bottom: 8px;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.slider__item_text {
+  font-size: 16px;
+  color: rgba(255, 255, 255, 0.5);
 }
 /*# sourceMappingURL=index.css.map */
