--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -1,3 +1,8 @@
+@import './base/vars';
 @import './base/base-config';
+@import './components/menu-btn';
+@import './components/btn';
 @import './modules/header';
 @import './modules/preview';
+@import './modules/vantage';
+@import './modules/feedback';
