--- a/styles/scss/base/_base-config.scss
+++ b/styles/scss/base/_base-config.scss
@@ -19,7 +19,7 @@ main {
 
 h1 {
 	font-size: 2em;
-	margin: .67em 0
+	margin: 0
 }
 
 a {
@@ -246,9 +246,10 @@ template {
 
 body {
   box-sizing: border-box;
-  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  font-family: $font;
   font-size: 14px;
   font-weight: 400;
+  position: relative;
   margin: 0;
   overflow-x: hidden;
 }
@@ -266,7 +267,7 @@ textarea:focus {
 /* Container block */
 .container {
   width: 100%;
-  padding: 0px 20px;
+  padding: 0px 15px;
   max-width: calc(1170px + 40px);
   margin: 0 auto;
 }
