--- a/styles/scss/modules/_header.scss
+++ b/styles/scss/modules/_header.scss
@@ -1,9 +1,11 @@
 .header {
-    background-color: white;
+    background-color: #ffffff;
+    padding: .5rem 0;
     position: sticky;
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 1;
 
     &__content {
         display: flex;
@@ -13,13 +15,33 @@
     }
 
     &__item {
+        flex: 0 1 auto;
+
+        &_left {
+            flex-grow: 1;
+            
+        }
+
+        &_center {
+            flex-grow: 0;
+        }
+
         &_end {
-            margin-left: auto;
+            flex-grow: 0;
         }
     }
 
     &__logo {
+        font-size: 24px;
+    }
 
+    &__button {
+        align-items: flex-end;
+        display: none;
+
+        @media (min-width: 768px) {
+            display: flex;
+        }
     }
 }
 
@@ -29,57 +51,56 @@
 
     &__text {
         background: linear-gradient(45deg, #950ebd 33%, #ff7934 66%, #FF22A4);
+        background-clip: text;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
     }
 }
 .nav {
+    display: none;
+
+    @media (min-width: 790px) {
+        display: block;
+    }
 
     &__list {
         align-items: center;
-        list-style: none;
         display: flex;
-        gap: 1rem;
+        flex-wrap: wrap;
+        list-style: none;
+        margin: 0;
+        gap: .5rem;
     }
 
     &__item {
         color: #000;
+        width: 100%;
+        
+        @media (min-width: 425px) {
+            width: fit-content;
+        }
     }
 
     &__link {
-        text-decoration: none;
-        font-size: 18px;
+        border-radius: .3rem;
         color: inherit;
-        padding: 1rem;
-        transition: 0.2s ease background-color;
-        &:hover {
-            background-color: rgba($color: rgb(0, 0, 0), $alpha: 0.2);
-        }
-    }
-}
-// .link-button {
-    
-// }
-.btn {
-    align-items: center;
-    color: #fff;
-    display: flex;
-    gap: .8rem;
-    text-decoration: none;
-    background-color: #000;
-    padding: 1rem 1.5rem 1rem 1rem;
-    transition: 0.2s ease background-color;
-
-    &:hover {
-        background-color: rgba($color: #000000, $alpha: .8);
-    }
-
-    &__icon {
-        width: 20px;
-        height: 20px;
-    }
-
-    &__text {
+        display: block;
+        font-family: $font;
         font-size: 16px;
+        font-weight: 300;
+        padding: .8rem .5rem;
+        transition: 0.2s ease background-color;
+        text-decoration: none;
+        text-transform: uppercase;
+        width: 100%;
+
+        &:hover {
+            background-color: rgba($color: #ddd, $alpha: 0.9);
+        }
+
+        
+        @media (min-width: 425px) {
+            width: fit-content;
+        }
     }
 }
