--- a/styles/scss/modules/_preview.scss
+++ b/styles/scss/modules/_preview.scss
@@ -1,39 +1,76 @@
 .preview {
+    align-items: center;
     background: url('../../img/head1.png') no-repeat center / cover;
-    padding: 6rem 0;
+    display: flex;
+    height: 50vh;
+    position: relative;
+    z-index: 0;
+    
+    @media (min-width: 425px) {
+        height: 80vh;
+    }
+
+    &__overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.33);
+        z-index: -1;
+    }
 
     &__content {
         display: flex;
-        flex-wrap: wrap;
-        gap: 1rem;
+        flex-flow: row-reverse wrap;
+        gap: 2.5rem;
     }
 
     &__item {
         display: flex;
         align-items: center;
         flex: 1 1 auto;
+        justify-content: center;
+        
+        
+        &_media {
+            flex-basis: 550px;
+        }
     }
-
+    
     &__content-wrapper {
         align-items: baseline;
         display: flex;
         flex-direction: column;
         justify-content: center;
         gap: 1rem;
-        max-width: 400px;
+        text-align: center;
+        align-items: center;
+        
+        @media (min-width: 1029px) {
+            max-width: 400px;
+            text-align: left;
+            align-items: start;
+        }
     }
 
     &__title {
+        color: #fff;
         font-family: "Roboto", Arial, Helvetica, sans-serif;
-        font-size: 38px;
+        font-size: calc(1.7em + 16 * ((100vw - 320px) / (1920 - 320)));;
         font-weight: 400;
     }
     
     &__description {
+        color: #fff;
         font-family: "Roboto", Arial, Helvetica, sans-serif;
-        font-size: 24px;
+        font-size: 21px;
         font-weight: 300;
         line-height: 1.3;
+        
+        @media (min-width: 425px) {
+            font-size: 24px;
+        }
     }
 
     &__button {
@@ -41,5 +78,13 @@
     }
 
     &__media {
+        border-radius: 1rem;
+    }
+    &__video {
+        display: none;
+
+        @media (min-width: 425px) {
+            display: block;
+        }
     }
 }
