--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -6,3 +6,5 @@
 @import './modules/preview';
 @import './modules/vantage';
 @import './modules/feedback';
+@import './modules/product';
+@import './modules/footer';
