--- a/styles/scss/base/_base-config.scss
+++ b/styles/scss/base/_base-config.scss
@@ -10,7 +10,8 @@
 html {
 	line-height: 1.15;
 	box-sizing: border-box;
-	font-family: sans-serif
+	font-family: sans-serif;
+	scroll-behavior: smooth !important;
 }
 
 main {
@@ -266,8 +267,12 @@ textarea:focus {
 
 /* Container block */
 .container {
-  width: 100%;
-  padding: 0px 15px;
-  max-width: calc(1170px + 40px);
-  margin: 0 auto;
+	width: 100%;
+	padding: 0px 10px;
+	max-width: calc(1170px + 40px);
+	margin: 0 auto;
+	
+	@media (min-width: 375px) {
+		padding: 0px 15px;
+	}
 }
