--- a/styles/scss/modules/_vantage.scss
+++ b/styles/scss/modules/_vantage.scss
@@ -1,5 +1,6 @@
 .vantage {
-    background-color: #10101e;
+    background: rgb(0,0,0);
+    background: linear-gradient(111deg, rgba(0,0,0,1) 0%, rgba(0,26,61,1) 40%, rgba(78,0,130,1) 74%, rgba(0,93,68,1) 100%);
     color: #fff;
     padding: 6rem 0;
 
@@ -11,7 +12,7 @@
         font-family: $font;
         font-size: calc(2.1em + 16 * ((100vw - 320px) / (1920 - 320)));
         font-weight: 400;
-        margin-bottom: 1em;
+        margin-bottom: 2em;
         text-align: center;
         text-transform: uppercase;
     }
@@ -19,33 +20,25 @@
     &__content {
         display: flex;
         flex-wrap: wrap;
-        gap: 1rem;
+        gap: 0.5rem;
     }
     
     &__item {
         align-items: center;
         display: flex;
         flex: 1 1 auto;
-        padding: 1rem;
-            
-        &_img--first {
-            flex-basis: 600px;
-        }
+        flex-direction: column;
+        padding: 0.25rem 0;
         
-        &_img--second {
-            flex-basis: 500px;
-        }
-        
-        &_img--third {
-            flex-basis: 300px;
-            
+        @media (min-width: 788px) {
+            flex: 1 1 calc(50% - 1rem);
+            flex-direction: row;
         }
 
         &_img--fourth {
-            flex-basis: 400px;
 
             img {
-                width: 400px;
+                max-width: 400px;
             }
         }
         
@@ -53,7 +46,6 @@
 
     &__text {
         width: 100%;
-        max-width: 430px;
 
         &_align_right {
             text-align: right;
@@ -70,34 +62,33 @@
         font-family: $font;
         font-size: calc(1.8em + 16 * ((100vw - 320px) / (1920 - 320)));
         font-weight: 300;
-        margin-bottom: 1em;
+        margin-bottom: 0.5em;
         text-transform: uppercase;
-        // word-break: break-all;
     }
     
     &__description {
         color: #fff;
         font-family: $font;
-        font-size: 25px; //calc(.8em + 16 * ((100vw - 320px) / (1920 - 320)));
-        font-weight: 300;
-        word-break: break-word;
+        font-size:  calc(1.1em + 16 * ((100vw - 320px) / (1920 - 320))); // ~25px;
+        font-weight: 100;
         line-height: 1.4;
     }
     
     &__list {
         font-family: $font;
-        font-size: 25px;
-        font-weight: 300;
+        font-size: calc(1.1em + 16 * ((100vw - 320px) / (1920 - 320)));
+        font-weight: 100;
         margin-left: 1em;
 
-        &-item {
+        // &-item {
 
-        }
+        // }
     }
 
     &__img {
         width: 100%;
+        min-width: 300px;
         object-fit: contain;
-        border-radius: 2rem;
+        border-radius: 10px;
     }
 }
