--- a/styles/scss/base/_vars.scss
+++ b/styles/scss/base/_vars.scss
@@ -1,5 +1,7 @@
 :root {
     --font: "Roboto", Arial, Helvetica, sans-serif;
+    --font-size: 16px;
 }
 
 $font: var(--font);
+$fontSize: var(--font-size);
