--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -1,5 +1,6 @@
 :root {
   --font: "Roboto", Arial, Helvetica, sans-serif;
+  --font-size: 16px;
 }
 
 /* Reset base config */
@@ -25,7 +26,6 @@ main {
 }
 
 h1 {
-  font-size: 2em;
   margin: 0;
 }
 
@@ -256,7 +256,7 @@ body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-family: var(--font);
-  font-size: 14px;
+  font-size: var(--font-size);
   font-weight: 400;
   position: relative;
   margin: 0;
@@ -282,11 +282,7 @@ textarea:focus {
   margin: 0 auto;
 }
 
-@media (min-width: 375px) {
-  .container {
-    padding: 0px 15px;
-  }
-}
+
 
 .menu {
   background-color: transparent;
@@ -303,11 +299,7 @@ textarea:focus {
   z-index: -1;
 }
 
-@media (min-width: 788px) {
-  .menu {
-    display: none;
-  }
-}
+
 
 .line {
   fill: none;
@@ -368,11 +360,7 @@ textarea:focus {
   z-index: 1;
 }
 
-@media (min-width: 788px) {
-  #mobileMenu {
-    display: none;
-  }
-}
+
 
 #mobileMenu ul li {
   width: 100%;
@@ -405,16 +393,22 @@ textarea:focus {
 }
 
 .btn__icon {
-  width: 16px;
-  height: 16px;
+  width: 18px;
+  height: auto;
 }
 
+
+
 .btn__text {
-  font-size: 16px;
+  font-size: 18px;
 }
+
+
 
 .header {
   background-color: #ffffff;
+  -webkit-box-shadow: 0px 5px 5px -5px rgba(34, 60, 80, 0.6);
+  box-shadow: 0px 5px 5px -5px rgba(34, 60, 80, 0.6);
   padding: .5rem 0;
   position: -webkit-sticky;
   position: sticky;
@@ -461,7 +455,7 @@ textarea:focus {
 }
 
 .header__logo {
-  font-size: 24px;
+  font-size: calc(1em + 16 * ((100vw - 320px) / (1920 - 320)));
 }
 
 .header__button {
@@ -471,13 +465,7 @@ textarea:focus {
   display: none;
 }
 
-@media (min-width: 790px) {
-  .header__button {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
-}
+
 
 .logo {
   text-decoration: none;
@@ -495,11 +483,7 @@ textarea:focus {
   display: none;
 }
 
-@media (min-width: 790px) {
-  .nav {
-    display: block;
-  }
-}
+
 
 .nav__list {
   -webkit-box-align: center;
@@ -520,13 +504,7 @@ textarea:focus {
   width: 100%;
 }
 
-@media (min-width: 425px) {
-  .nav__item {
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-  }
-}
+
 
 .nav__link {
   border-radius: .3rem;
@@ -547,19 +525,13 @@ textarea:focus {
   background-color: rgba(221, 221, 221, 0.9);
 }
 
-@media (min-width: 425px) {
-  .nav__link {
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-  }
-}
+
 
 .preview {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: url("../../img/head1.png") no-repeat center/cover;
+  background: url("../../img/webp/head1_converted.webp") no-repeat center/cover;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -568,11 +540,7 @@ textarea:focus {
   z-index: 0;
 }
 
-@media (min-width: 425px) {
-  .preview {
-    height: 80vh;
-  }
-}
+
 
 .preview__overlay {
   position: absolute;
@@ -588,12 +556,14 @@ textarea:focus {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: reverse;
-      -ms-flex-flow: row-reverse wrap;
-          flex-flow: row-reverse wrap;
-  gap: 2.5rem;
+      -ms-flex-flow: column-reverse wrap;
+          flex-flow: column-reverse wrap;
+  gap: .9rem;
 }
+
+
 
 .preview__item {
   -webkit-box-align: center;
@@ -606,13 +576,8 @@ textarea:focus {
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
-}
-
-.preview__item_media {
-  -ms-flex-preferred-size: 550px;
-      flex-basis: 550px;
+      -ms-flex: 1 1 calc(50% - 2.5rem);
+          flex: 1 1 calc(50% - 2.5rem);
 }
 
 .preview__content-wrapper {
@@ -636,36 +601,23 @@ textarea:focus {
           align-items: center;
 }
 
-@media (min-width: 1029px) {
-  .preview__content-wrapper {
-    max-width: 400px;
-    text-align: left;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: start;
-  }
-}
+
 
 .preview__title {
   color: #fff;
   font-family: "Roboto", Arial, Helvetica, sans-serif;
-  font-size: calc(2.3em + 16 * ((100vw - 320px) / (1920 - 320)));
+  font-size: calc(1.9em + 16 * ((100vw - 320px) / (2560 - 320)));
   font-weight: 400;
 }
 
 .preview__description {
   color: #fff;
   font-family: "Roboto", Arial, Helvetica, sans-serif;
-  font-size: 21px;
+  font-size: 24px;
   font-weight: 300;
   line-height: 1.3;
 }
 
-@media (min-width: 425px) {
-  .preview__description {
-    font-size: 24px;
-  }
-}
 
 .preview__button {
   display: inline-block;
@@ -679,11 +631,7 @@ textarea:focus {
   display: none;
 }
 
-@media (min-width: 425px) {
-  .preview__video {
-    display: block;
-  }
-}
+
 
 .vantage {
   background: black;
@@ -698,7 +646,7 @@ textarea:focus {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-family: var(--font);
-  font-size: calc(2.1em + 16 * ((100vw - 320px) / (1920 - 320)));
+  font-size: calc(2.1em + 16 * ((100vw - 320px) / (2560 - 320)));
   font-weight: 400;
   margin-bottom: 2em;
   text-align: center;
@@ -731,30 +679,18 @@ textarea:focus {
   padding: 0.25rem 0;
 }
 
-@media (min-width: 788px) {
-  .vantage__item {
-    -webkit-box-flex: 1;
-        -ms-flex: 1 1 calc(50% - 1rem);
-            flex: 1 1 calc(50% - 1rem);
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-  }
+.vantage__item picture {
+  margin: 0 auto;
 }
 
-.vantage__item_img--fourth img {
-  max-width: 400px;
-}
+
 
 .vantage__text {
   width: 100%;
+  text-align: center;
 }
 
-.vantage__text_align_right {
-  text-align: right;
-  margin-left: auto;
-}
+
 
 .vantage__subtitle {
   background: linear-gradient(45deg, #19979c 13%, #0D78BC 66%, #19979c);
@@ -763,7 +699,7 @@ textarea:focus {
   -webkit-text-fill-color: transparent;
   color: #fff;
   font-family: var(--font);
-  font-size: calc(1.8em + 16 * ((100vw - 320px) / (1920 - 320)));
+  font-size: calc(1.8em + 16 * ((100vw - 320px) / (2560 - 320)));
   font-weight: 300;
   margin-bottom: 0.5em;
   text-transform: uppercase;
@@ -772,16 +708,17 @@ textarea:focus {
 .vantage__description {
   color: #fff;
   font-family: var(--font);
-  font-size: calc(1.1em + 16 * ((100vw - 320px) / (1920 - 320)));
+  font-size: calc(1em + 16 * ((100vw - 320px) / (2560 - 320)));
   font-weight: 100;
   line-height: 1.4;
 }
 
 .vantage__list {
   font-family: var(--font);
-  font-size: calc(1.1em + 16 * ((100vw - 320px) / (1920 - 320)));
+  font-size: calc(1em + 16 * ((100vw - 320px) / (2560 - 320)));
   font-weight: 100;
   margin-left: 1em;
+  text-align: left;
 }
 
 .vantage__img {
@@ -798,7 +735,7 @@ textarea:focus {
 }
 
 .feedback__title {
-  font-size: 30px;
+  font-size: calc(2.1em + 16 * ((100vw - 320px) / (2560 - 320)));
   font-weight: 400;
   margin-bottom: 1.5em;
   text-transform: uppercase;
@@ -914,29 +851,7 @@ textarea:focus {
   color: rgba(255, 255, 255, 0.5);
 }
 
-@media (min-width: 576px) {
-  .slider__item {
-    height: 250px;
-  }
-  .slider__item_inner {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-  }
-  .slider__item_testimonial {
-    margin-left: 15px;
-  }
-  .slider__item_img {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 0 150px;
-            flex: 0 0 150px;
-    max-width: 150px;
-  }
-  .slider__item_testimonial {
-    text-align: left;
-  }
-}
+
 
 .product {
   background-color: #ffffff;
@@ -945,7 +860,7 @@ textarea:focus {
 
 .product__title {
   color: #000;
-  font-size: 30px;
+  font-size: calc(1.8em + 16 * ((100vw - 320px) / (2560 - 320)));
   font-weight: 400;
   margin-bottom: .6em;
   text-align: center;
@@ -954,7 +869,7 @@ textarea:focus {
 
 .product__description {
   color: #000;
-  font-size: 16px;
+  font-size: calc(1em + 16 * ((100vw - 320px) / (2560 - 320)));
   font-weight: 100;
   margin-bottom: .6em;
   text-align: center;
@@ -1011,6 +926,15 @@ textarea:focus {
           justify-content: center;
 }
 
+.platform__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
 .platform__footer_windows {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1022,11 +946,23 @@ textarea:focus {
   gap: .5rem;
 }
 
+.platform__version a:not(:first-child) {
+  -webkit-filter: opacity(0.5);
+          filter: opacity(0.5);
+  pointer-events: none;
+}
+
 .platform__img {
   width: 150px;
   height: 150px;
   margin: 0 auto;
   border-radius: 0;
+}
+
+.platform__button {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
 }
 
 .footer {
@@ -1051,14 +987,7 @@ textarea:focus {
   gap: 1rem;
 }
 
-@media (min-width: 760px) {
-  .footer__content {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-  }
-}
+
 
 .footer__item {
   -webkit-box-flex: 1;
@@ -1143,15 +1072,6 @@ textarea:focus {
   text-align: center;
 }
 
-@media (min-width: 760px) {
-  .footer__info {
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: end;
-    text-align: right;
-  }
-}
-
 .thaksAdn__text {
   font-size: 14px;
 }
@@ -1159,4 +1079,135 @@ textarea:focus {
 .thaksAdn__link {
   color: #fff;
 }
+
+@media (min-width: 2560px) {
+  .container {
+    max-width: calc(1900px + 40px);
+    padding: 0px 15px;
+  }
+}
+
+@media (min-width: 790px) {
+  .header__button {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .nav {
+    display: block;
+  }
+}
+@media (min-width: 788px) {
+  .menu {
+    display: none;
+  }
+  #mobileMenu {
+    display: none;
+  }
+  .vantage__item {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 calc(50% - 1rem);
+            flex: 1 1 calc(50% - 1rem);
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+@media (min-width: 780px) {
+  .vantage__text {
+    text-align: left;
+  }
+  .vantage__text_align_right {
+    text-align: right;
+    margin-left: auto;
+  }
+}
+@media (min-width: 769px) {
+  .btn__icon {
+    font-size: calc(.4em + 16 * ((100vw - 320px) / (2560 - 320)));
+  }
+  .btn__text {
+    font-size: calc(.6em + 16 * ((100vw - 320px) / (2560 - 320)));
+  }
+  .nav__link {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    font-size: calc(.6em + 16 * ((100vw - 320px) / (2560 - 320)));
+  }
+  .preview__content {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+    -ms-flex-flow: row-reverse wrap;
+    flex-flow: row-reverse wrap;
+    gap: 2.5rem;
+  }
+  .preview__content-wrapper {
+    text-align: left;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: start;
+  }
+}
+@media (min-width: 760px) {
+  .footer__content {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .footer__info {
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: end;
+    text-align: right;
+  }
+}
+@media (min-width: 576px) {
+  .slider__item {
+    height: 250px;
+  }
+  .slider__item_inner {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .slider__item_testimonial {
+    margin-left: 15px;
+  }
+  .slider__item_img {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 150px;
+            flex: 0 0 150px;
+    max-width: 150px;
+  }
+  .slider__item_testimonial {
+    text-align: left;
+  }
+}
+@media (min-width: 425px) {
+  .nav__item {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+  .preview {
+    height: 90vh;
+  }
+  .preview__description {
+    font-size: calc(1em + 16 * ((100vw - 320px) / (2560 - 320)));
+  }
+  .preview__video {
+    display: block;
+  }
+}
+
+@media (min-width: 375px) {
+  .container {
+    padding: 0px 15px;
+  }
+}
+
 /*# sourceMappingURL=index.css.map */
