--- a/styles/scss/components/_btn.scss
+++ b/styles/scss/components/_btn.scss
@@ -14,11 +14,19 @@
     }
 
     &__icon {
-        width: 16px;
-        height: 16px;
+        width: 18px;
+        height: auto;
+
+        @media (min-width: 769px) {
+            font-size: calc(.4em + 16 * ((100vw - 320px) / (2560 - 320)));
+        }
     }
 
     &__text {
-        font-size: 16px;
+        font-size: 18px;
+        
+        @media (min-width: 769px) {
+            font-size: calc(.6em + 16 * ((100vw - 320px) / (2560 - 320)));
+        }
     }
 }
