--- a/styles/scss/modules/_preview.scss
+++ b/styles/scss/modules/_preview.scss
@@ -1,13 +1,13 @@
 .preview {
     align-items: center;
-    background: url('../../img/head1.png') no-repeat center / cover;
+    background: url('../../img/webp/head1_converted.webp') no-repeat center / cover;
     display: flex;
     height: 70vh;
     position: relative;
     z-index: 0;
     
     @media (min-width: 425px) {
-        height: 80vh;
+        height: 90vh;
     }
 
     &__overlay {
@@ -22,19 +22,24 @@
 
     &__content {
         display: flex;
-        flex-flow: row-reverse wrap;
-        gap: 2.5rem;
+        flex-flow: column-reverse wrap;
+        gap: .9rem;
+        
+        @media (min-width: 769px) {
+            flex-flow: row-reverse wrap;
+            gap: 2.5rem;
+        }
     }
 
     &__item {
         align-items: center;
         display: flex;
         justify-content: center;
-        flex: 1 1 auto;
+        flex: 1 1 calc(50% - 2.5rem);
         
-        &_media {
-            flex-basis: 550px;
-        }
+        // &_media {
+        //     flex-basis: 550px;
+        // }
     }
     
     &__content-wrapper {
@@ -46,8 +51,7 @@
         text-align: center;
         align-items: center;
         
-        @media (min-width: 1029px) {
-            max-width: 400px;
+        @media (min-width: 769px) {
             text-align: left;
             align-items: start;
         }
@@ -56,19 +60,19 @@
     &__title {
         color: #fff;
         font-family: "Roboto", Arial, Helvetica, sans-serif;
-        font-size: calc(2.3em + 16 * ((100vw - 320px) / (1920 - 320)));;
+        font-size: calc(1.9em + 16 * ((100vw - 320px) / (2560 - 320)));
         font-weight: 400;
     }
     
     &__description {
         color: #fff;
         font-family: "Roboto", Arial, Helvetica, sans-serif;
-        font-size: 21px;
+        font-size: 24px;
         font-weight: 300;
         line-height: 1.3;
         
         @media (min-width: 425px) {
-            font-size: 24px;
+            font-size: calc(1em + 16 * ((100vw - 320px) / (2560 - 320)));
         }
     }
 
